--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 	<modules>
 		<module>consumer-ribbon-demo</module>
 		<module>eureka-demo</module>
-		<module>dept-8001</module>
+		<!-- <module>dept-8001</module> -->
 		<module>provider-demo</module>
 		<module>consumer</module>
 
