--- a/consumer-feign-demo/pom.xml
+++ b/consumer-feign-demo/pom.xml
@@ -6,6 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>consumer-feign-demo</artifactId>
+ <!--  <packaging>war</packaging> -->
   
 <dependencies>
 		<dependency><!-- 自己定义的api -->
@@ -43,6 +44,55 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
+		<!-- mybatis -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+		</dependency>
+		
+		<!--jsp支持-->
+		   <!-- servlet 依赖. -->
+		   <dependency>
+		     <groupId>javax.servlet</groupId>
+		     <artifactId>javax.servlet-api</artifactId>
+		     <scope>provided</scope>
+		   </dependency>
+		   <dependency>
+		     <groupId>javax.servlet</groupId>
+		     <artifactId>jstl</artifactId>
+		     <scope>provided</scope>
+		   </dependency>
+		   <!-- tomcat 的支持.-->
+		   <dependency>
+		     <groupId>org.springframework.boot</groupId>
+		     <artifactId>spring-boot-starter-tomcat</artifactId>
+		     <scope>provided</scope>
+		   </dependency>
+		   <dependency>
+		     <groupId>org.apache.tomcat.embed</groupId>
+		     <artifactId>tomcat-embed-jasper</artifactId>
+		     <scope>provided</scope>
+		   </dependency>
+		   <!-- Thymeleaf支持 -->
+		   <dependency>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    		</dependency>
+		
+		
 	</dependencies>
   
   
