--- a/zuul-gateway-demo/pom.xml
+++ b/zuul-gateway-demo/pom.xml
@@ -5,25 +5,20 @@
     <artifactId>microspringcloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>provider-demo</artifactId>
+  <artifactId>zuul-gateway-demo</artifactId>
   
-   <dependencies>
-   		<!-- actuator监控信息完善 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-        <!-- hystrix -->
+  
+  <dependencies>
+  		<!-- zuul路由网关 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-hystrix</artifactId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
-   		<!-- 将微服务provider侧注册进eureka -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
-		<!-- 修改后立即生效，热部署 -->
+  		<!-- 热部署插件 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>springloaded</artifactId>
@@ -32,7 +27,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-   </dependencies>
-   
+  </dependencies>
+  
+  
+  
+  
+  
   
 </project>
